--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terminal of Goss</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
+
+<!-- HEAD START -->
+{% block head %} {% include 'block_files/head.html' %} {% endblock head %}
+<!-- HEAD END -->
+
 <body>
 
     <!-- HEADER START -->
@@ -18,10 +17,10 @@
 
         <div class="css-typing">
             <h1>
-                Terminal
+                the Trmnl
             </h1>
             <h2>
-                % Where devs come to gossip.
+                % gossip by devs, for devs.
             </h2>
         </div>
 
@@ -50,7 +49,7 @@
 
 
     <main>
-        <div class="flx row gap-4">
+        <div class="flx row gap-2">
 
 
 
