--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -136,7 +136,7 @@ html {
     background-color: #0f0f0f;
 }
 main{
-    background-color: #9a007870;
+    /* background-color:  rgba(223, 45, 255, 0.524); */
 }
 input,
 textarea{
@@ -216,18 +216,23 @@ thead{
     }
 }
 .box-glow {
-    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    /* background-color:  rgba(45, 213, 255, 0.192); */
+    /* -webkit-animation: glow 1s ease-in-out infinite alternate;
     -moz-animation: glow 1s ease-in-out infinite alternate;
-    animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate; */
+    -webkit-box-shadow:0px 0px 192px 1px rgba(45, 167, 255, 0.395);
+    -moz-box-shadow: 0px 0px 192px 1px rgba(45, 255, 185, 0.414);
+    box-shadow: 0px 0px 192px 1px rgba(45, 255, 241, 0.413);
 }
-@-webkit-keyframes glow {
-    /* from {
+/* @-webkit-keyframes glow {
+    
+    from {
         box-shadow: 0 0 20px #fff, 0 0 40px #fff, 0 0 20px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 35px #e60073, 0 0 50px #e60073;
-    } */
     }
     to {
         box-shadow: 0 0 35px #fff, 0 0 50px #fff, 0 0 40px #ff4da6, 0 0 55px #ff4da6, 0 0 40px #ff4da6, 0 0 30px #ff4da6, 0 0 50px #ff4da6;
       }
+} */
 .hidden{
     visibility: hidden;
 }
@@ -332,7 +337,7 @@ button,
     /* padding: 10px; */
 }
 body {
-    padding: 20px;
+    padding: 30px;
     margin: 0;
 }
 header,
@@ -365,11 +370,11 @@ button,
     border-radius: 1rem;
 } */
 main{
-    border-radius: 20px;
+    /* border-radius: 20px; */
 }
 input,
 textarea{
-    border: 1px solid #52FD61;
+    border-bottom: 1px solid #c1c1c1;
 }
 button,
 .btn{
