--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -100,9 +100,10 @@ body *{
     font-family: monospace;
 }
 /*******************************************/
-/*! LINE-HEIGHT
+/*! LINE-HEIGHT & LETTER SPACING
 /*******************************************/
 body  {
+    letter-spacing: .2rem;
     /* line-height: 2rem; */
 }
 header{
@@ -126,8 +127,14 @@ thead{
 table{
     text-align: left;
 }
-.vert-align{
+.vert-align-base{
     vertical-align: baseline;
+}
+.align-items-base{
+    align-items: baseline;
+}
+.align-items-center{
+    align-items: center;
 }
 /*******************************************/
 /*! BACKGROUND COLORS
@@ -155,6 +162,9 @@ button:hover,
 }
 .border-t-b:hover{
     background-color: #4c4545;
+}
+.custom-select select{
+    background-color: #0f0f0f;
 }
 /*******************************************/
 /*! TEXT COLOR
@@ -202,6 +212,9 @@ thead{
 .medium-grey{
     color: #372f2f;
 }
+.gray{
+    color: #c1c1c1;
+}
 .glow:hover {
     -webkit-animation: glow 1s ease-in-out infinite alternate;
     -moz-animation: glow 1s ease-in-out infinite alternate;
@@ -236,6 +249,9 @@ thead{
 .hidden{
     visibility: hidden;
 }
+.custom-select select{
+    color: #52FD61;    
+}
 /*******************************************/
 /*! TEXT DECORATION
 /*******************************************/
@@ -258,7 +274,9 @@ a:hover{
 .upper{
     text-transform: uppercase;
 }
-
+.italic{
+    font-style: italic;
+}
 /*******************************************/
 /*! LAYOUT
 /*******************************************/
@@ -298,7 +316,8 @@ a:hover{
 header,
 main,
 footer{
-    /* width: 1400px; */
+    width: 1200px;
+    overflow: hidden;
 }
 header{
     height: 136px;
@@ -322,13 +341,13 @@ button,
     width: 50%;
 }
 .big-section{
-    min-width: 800px; 
+    width: 1800px; 
 }
 .half-section{
     width: 50%;
 }
 .sml-section{
-    width: 30%;
+    width: 500px;
 }
 /*******************************************/
 /*! PADDING & MARGIN
@@ -353,10 +372,16 @@ footer{
 .mb{
     margin-bottom: 20px;
 }
+.ml{
+    margin-left: 15px;
+}
 button,
 .btn{
     padding: 10px;
     margin-top: 10px;
+}
+.custom-select select{
+    padding: 10px;
 }
 /*******************************************/
 /*! BORDERS
@@ -567,4 +592,10 @@ table {
   left: 0;
   width: 100%;
   height: 1.5em; /* don't forget to set the height! */
+}
+/*******************************************/
+/*! CUSTOM SELECT MENU/ DROPDOWN
+/*******************************************/
+.custom-select{
+
 }
