--- a/flask_app/templates/block_files/footer.html
+++ b/flask_app/templates/block_files/footer.html
@@ -3,8 +3,29 @@
 <body>
     {% block footer %}
     <footer class="border-t-dash mt">
+        <div class="flx row">
+            
+            <h3>Current date and time:</h3>
+            <span id="datetime" class="ml"> </span>
+        </div>
         {% block nav %} {% include 'block_files/nav.html' %} {% endblock nav %}
     </footer>
+    <script>
+        // create a function to update the date and time
+        function updateDateTime() {
+          // create a new `Date` object
+          const now = new Date();
+  
+          // get the current date and time as a string
+          const currentDateTime = now.toLocaleString();
+  
+          // update the `textContent` property of the `span` element with the `id` of `datetime`
+          document.querySelector('#datetime').textContent = currentDateTime;
+        }
+  
+        // call the `updateDateTime` function every second
+        setInterval(updateDateTime, 1000);
+      </script>
     {% endblock footer %}
 </body>
 </html>
